# VCP-trader

./: .env.example  .gitignore  DEVELOPMENT.md  README.md  pyproject.toml  requirements.txt
scripts/: download_history.py  run_backtest.py  run_scanner.py  run_trader.py
src/: __init__.py
src/alerts/: __init__.py  notifier.py
src/backtesting/: __init__.py  backtest_engine.py  backtest_report.py  historical_data.py  performance_analyzer.py
src/core/: __init__.py  config.py  database.py
src/dashboard/: __init__.py  app.py
src/data/: __init__.py  broker_client.py  data_fetcher.py
src/patterns/: __init__.py  rs_calculator.py  trend_template.py  vcp_detector.py
src/trading/: __init__.py  order_executor.py  risk_manager.py  stop_loss.py
tests/: test_patterns.py
